plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'cn.mediinfo'
sourceCompatibility = '17'
dependencyManagement {
    imports {
        mavenBom 'cn.mediinfo:mediinfo-bom-dependencies:1.5.3'
    }
}
repositories {
    mavenLocal()
    maven {
        allowInsecureProtocol = true
        url 'http://172.19.30.181:8081/repository/maven-public/'
    }
}

dependencies {
    implementation 'cn.mediinfo:mediinfo-cyan-msf-service-starter'
    implementation 'cn.mediinfo:mediinfo-lyra-extension-starter'
    implementation 'cn.mediinfo:mediinfo-cyan-msf-eventbus-starter'
    implementation 'cn.mediinfo:mediinfo-cyan-msf-util-starter'
    implementation 'cn.mediinfo:mediinfo-cyan-msf-cache-redis-starter'
    implementation 'cn.mediinfo:mediinfo-cyan-msf-distributedlock-starter'
    implementation 'cn.mediinfo:mediinfo-cyan-aqua-scheduler-starter:1.6.0-alpha.16'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
